중지/초기화 기능 추가

--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,9 +1,4 @@
-.start {
-    background: #3f3;
-}
-
-
-.start:hover {
-    background: #bfb;
+.button:hover {
+    opacity: 0.7;
     cursor: pointer;
 }
