--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,4 +1,9 @@
+.button {
+    user-select: none;
+    transition: opacity 0.1s, background 0.5s;
+}
+
 .button:hover {
-    opacity: 0.7;
+    opacity: 0.95;
     cursor: pointer;
 }
